fixed navbar sticky on mobile

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -36,6 +36,9 @@
   .navBurger
     display: block
     z-index: 101
+  .navbar
+    .sticky
+      position: absolute
   .overlay
     position: fixed
     background: #2a3140
