--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -142,12 +142,14 @@ header
 	padding-bottom: 100px
 
 .nav_wrapper
-  padding-bottom: 130px
+  padding-bottom: 155px
   position: relative
 .navbar
   display: flex
   align-items: center
   justify-content: space-between
+  position: absolute
+  width: 100%
   &.sticky
     background-color: $dark_gray
     position: fixed
